--- a/instagrampuzzle1/index.html
+++ b/instagrampuzzle1/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<link rel="stylesheet" type="text/css" href="css/main.css" />
+		<link rel="stylesheet" type="text/css" href="http://code.jquery.com/ui/1.9.1/themes/base/jquery-ui.css" />
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
 		<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.23/jquery-ui.min.js"></script>
 		<script src="js/instagram.js"></script>
@@ -39,8 +40,13 @@
 		<form>
 		<p>1. Click <a href="https://instagram.com/oauth/authorize/?client_id=6b3f2822a0f547d6b0f502887e8ff484&redirect_uri=http://omardelarosa.com/js/instagrampuzzle1/index.html&response_type=token">here</a> to login to Instagram.</p>
 		<p>2. Choose a photo tag or keyword: <input id="tagInput" name="tag or keyword" type="text"></input> (no spaces, please!).</p>
-		<p>3. Choose a width: <input id="widthInput" name="width" type="text"></input> (only numbers, please!).</p>
-		<p id="imagerefresh">4. Click <input id="generate" type="submit"><b></b></input> to generate an image.
+		
+<p>3. <label for="puzzleWidth">Select puzzle size: </label>
+    	<input type="text" id="puzzleWidth" style="border: 0; color: black; font-weight: bold;" />
+
+		<div id="widthInput"></div></p>
+
+		<p id="imagerefresh">4. Click <p id="generate"><b>GENERATE!</b></p> to generate an image.
 		<p>5. Click and drag parts of the image to unscramble them.</p>
 		<p>6. Click <a id="userProfile">here</a> to see the original photo on Instagram.</p>
 		<p>7. Click <b><a id="likeButton">here</a></b> to like this photo. <b><a id="photoId"></a></b></p>
