Added Info Box Style, Fixed Empty Box Bug

--- a/instagrampuzzle1/index.html
+++ b/instagrampuzzle1/index.html
@@ -46,7 +46,7 @@
 
 		<div id="widthInput"></div></p>
 
-		<p id="imagerefresh">4. Click <p id="generate"><b>GENERATE!</b></p> to generate an image.
+		<p id="imagerefresh">4. Click <a id="generate"><b>GENERATE!</b></a> to generate an image.
 		<p>5. Click and drag parts of the image to unscramble them.</p>
 		<p>6. Click <a id="userProfile">here</a> to see the original photo on Instagram.</p>
 		<p>7. Click <b><a id="likeButton">here</a></b> to like this photo. <b><a id="photoId"></a></b></p>
@@ -67,10 +67,12 @@
 		<li>
 
 		<div id="info">
-		<div id="caption"></div>
+
+		<div id="originalPhoto"></div>
 		<div id="userName"></div>
 		<div id="userPhoto"></div>
-		<div id="originalPhoto"></div>
+		<div id="caption"></div>
+		
 		</div>	<!----- div info ---->
 		
 		
