Added "Done" Functions

--- a/instagrampuzzle1/index.html
+++ b/instagrampuzzle1/index.html
@@ -50,6 +50,7 @@
 		<p>5. Click and drag parts of the image to unscramble them.</p>
 		<p>6. Click <a id="userProfile">here</a> to see the original photo on Instagram.</p>
 		<p>7. Click <b><a id="likeButton">here</a></b> to like this photo. <b><a id="photoId"></a></b></p>
+		<p>87. Click <b><a id="doneButton">here</a></b> if you have finished the puzzle.</p>
 		</form>
 		</div>
 
