--- a/instagrampuzzle1/index.html
+++ b/instagrampuzzle1/index.html
@@ -8,6 +8,17 @@
 		<script src="js/instagram.js"></script>
 		<title>instagram puzzle</title>
 
+		<script type="text/javascript">
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-8283504-9']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+</script>
 
 	</head>
 	<body>
@@ -46,11 +57,11 @@
 
 		<div id="widthInput"></div></p>
 
-		<p id="imagerefresh">4. Click <a id="generate"><b>GENERATE!</b></a> to generate an image.
+		<p id="imagerefresh">4. Click <a id="generate"><b>GENERATE!</b></a> to generate an image.</p>
 		<p>5. Click and drag parts of the image to unscramble them.</p>
-		<p>6. Click <a id="userProfile">here</a> to see the original photo on Instagram.</p>
-		<p>7. Click <b><a id="likeButton">here</a></b> to like this photo. <b><a id="photoId"></a></b></p>
-		<p>87. Click <b><a id="doneButton">here</a></b> if you have finished the puzzle.</p>
+		<p>6. Click <a id="userProfile"><b>here</b></a> to see the original photo on Instagram.</p>
+		<p>7. Click <a id="likeButton"><b>here</b></a> to like this photo. <b><a id="photoId"></a></b></p>
+		<p>87. Click <a id="doneButton"><b>here</b></a> if you have finished the puzzle.</p>
 		</form>
 		</div>
 
@@ -61,13 +72,14 @@
 		
 
 		</ul>
+
+		
 		</div> <!----- div wrapper ---->
 
 		</li>
 		
 		<li>
-
-		<div id="info">
+<div id="info" style="float:left;">
 
 		<div id="originalPhoto"></div>
 		<div id="userName"></div>
@@ -76,10 +88,14 @@
 		
 		</div>	<!----- div info ---->
 		
-		
+
 		</li>
+
 		
+
 		</ul>
+
+		<p id="credits">designed by <a href="http://www.omardelarosa.com">omar delarosa</a> | copyright 2012 </p>
 
 	</body>
 </html>
