fixed uri issue

--- a/instagrampuzzle1/index.html
+++ b/instagrampuzzle1/index.html
@@ -49,7 +49,7 @@
 		<div id="wrapper" >	
 		<div id="instructions">
 		<form>
-		<p>1. Click <a href="https://instagram.com/oauth/authorize/?client_id=6b3f2822a0f547d6b0f502887e8ff484&redirect_uri=http://omardelarosa.com/js/instagrampuzzle1/index.html&response_type=token">here</a> to login to Instagram.</p>
+		<p>1. Click <a href="https://instagram.com/oauth/authorize/?client_id=6b3f2822a0f547d6b0f502887e8ff484&redirect_uri=http://omardelarosa.com/scramblr/instagrampuzzle1&response_type=token">here</a> to login to Instagram.</p>
 		<p>2. Choose a photo tag or keyword: <input id="tagInput" name="tag or keyword" type="text"></input> (no spaces, please!).</p>
 		
 <p>3. <label for="puzzleWidth">Select puzzle size: </label>
